--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "chatbot-arepas-mvp",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "axios": "^1.13.4",
     "body-parser": "^2.2.2",
+    "dotenv": "^16.3.1",
     "express": "^5.2.1"
   }
 }
